# Glaciem

./: .gitignore  BUILD_LINUX.md  CHANGELOG.md  CMakeLists.txt  POW_DESIGN.md  README.md  SETUP.md  TESTNET.md  WHITEPAPER.md
.github/workflows/: bench.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  lattice_jni.c  randomx_stub.c  wallet_jni.cpp
android/app/src/main/java/com/hughson/rime/: MainActivity.kt  MinerEngine.kt  MinerNative.kt  PeerCache.kt  RpcClient.kt  WalletNative.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
cloudflare/: glaciem-rpc-worker.js  wrangler.toml
cloudflare/.wrangler/cache/: wrangler-account.json
contrib/depends/hosts/: android.mk
contrib/epee/src/: net_ssl.cpp
explorer/: wrangler.toml
explorer/public/: index.html
flatpak/: build-flatpak.sh  com.hughson.glaciem.desktop  com.hughson.glaciem.metainfo.xml  com.hughson.glaciem.yaml
pool/cloudflare/: pool-worker.js  wrangler.toml
pool/cloudflare/public/: index.html
pool/server/: fund_sponsorship.py  pool-server.py  pool_verify.c
pow/: .gitignore  lattice_colab.ipynb  lattice_ref.c  test_vectors.txt
pow/app/: .gitignore  AppIcon.icns  Info.plist  RimeMiner.swift  bridging.h  build.sh  make_icon.sh  make_icon.swift  miner_core.h  miner_core.m  project.yml
pow/app_linux/: CMakeLists.txt  build-portable.sh  build.sh  main.cpp  miner_engine.cpp  miner_engine.h
pow/app_linux/qml/: Main.qml
pow/app_win/: .gitignore  build_win.sh  rime.rc  rime_miner_win.c
pow/bench/: arx_simd.c  x2_interleave.c
pow/keygen/: .gitignore  build_macos_lib.sh  build_macos_test.sh  easylogging_init.cpp  rime_keygen.cpp  rime_keygen.h  test_keygen.cpp
pow/keygen/shim/: syncobj.h
pow/keygen/shim/boost/thread/: lock_guard.hpp  mutex.hpp
pow/keygen/shim/sodium/: crypto_verify_32.h
pow/wallet/: peer_cache.c  peer_cache.h  rime_wallet.cpp  rime_wallet.h
src/: cryptonote_config.h
src/blockchain_utilities/: CMakeLists.txt
src/checkpoints/: checkpoints.cpp
src/crypto/: CMakeLists.txt  lattice.c  lattice.h
src/cryptonote_basic/: cryptonote_format_utils.cpp
src/cryptonote_core/: blockchain.cpp  cryptonote_tx_utils.cpp
src/daemon/: CMakeLists.txt
src/daemonizer/: posix_fork.cpp
src/debug_utilities/: CMakeLists.txt
src/gen_multisig/: CMakeLists.txt
src/gen_ssl_cert/: CMakeLists.txt
src/hardforks/: hardforks.cpp
src/p2p/: net_node.inl
src/rpc/: core_rpc_server.cpp
src/simplewallet/: CMakeLists.txt
src/wallet/: CMakeLists.txt
website/: index.html  wrangler.toml
website/public/: index.html  privacy.html
wordmine/: package-lock.json  package.json  wrangler.toml
wordmine/payout/: faucet_split.py  payout_daemon.py
wordmine/public/: game.js  index.html
wordmine/public/lib/: wallet.bundle.js  wallet.js  wordlist-en.js
wordmine/src/: words.js  worker.js
